# victoryroute

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  package.json  pnpm-lock.yaml  pycheck.py  pyproject.toml  pytest_output.txt  tsconfig.json
.agents/: AGENTS.md
.agents/notes/: ENVIRONMENT_DESIGN.md  ITEMS.md  MILESTONE_PLAN.md  PROJECT.md
.agents/plans/: estimate_move_result.md
.claude/: CLAUDE.md
.github/workflows/: python-tests.yml
data/game/: abilities.json  items.json  moves.json  natures.json  pokemon.json  type_chart.json
data/stats/: README.md
data/stats/gen9ou/: 1500.json
data/teams/gen9ou/: 0.team  1.team  10.team  11.team  12.team  13.team  14.team  15.team  2.team  3.team  4.team  5.team  6.team  7.team  8.team  9.team
experimental/huangr/: connect_server.py  download_pokechamp_data.py
python/agents/: __init__.py  agent_interface.py  agent_interface_test.py  agent_registry.py  agent_registry_test.py  battle_action_generator.py  first_available_agent.py  first_available_agent_test.py  random_agent.py  random_agent_test.py  zero_shot_agent.py  zero_shot_agent_test.py  zero_shot_no_history_agent.py  zero_shot_no_history_agent_test.py
python/agents/adk_agents/: generate_turn_predictor_state.py
python/agents/prompts/: battle_action_examples.md  zero_shot_agent.md  zero_shot_agent_turn_prompt.md  zero_shot_no_history_agent.md
python/agents/testdata/: battle-gen9ou-517_llmevents.txt  battle-gen9ou-517_showdown.txt  battle-gen9ou-518_llmevents.txt  battle-gen9ou-518_showdown.txt
python/agents/tools/: __init__.py  battle_simulator.py  battle_simulator_move_order_test.py  battle_simulator_test.py  get_available_moves.py  get_object_game_data.py  llm_event_logger.py  llm_event_logger_test.py  pokemon_state_priors_reader.py  pokemon_state_priors_reader_test.py
python/agents/turn_predictor/: action_simulation_agent.py  action_simulation_agent_test.py  battle_action_loop_agent.py  decision_schemas.py  json_extraction_utils.py  json_extraction_utils_test.py  json_llm_agent.py  llm_model_factory.py  simulation_result.py  team_predictor_agent.py  turn_predictor.py  turn_predictor_agent.py  turn_predictor_prompt_builder.py  turn_predictor_prompt_builder_test.py  turn_predictor_state.py  turn_predictor_state_test.py
python/agents/zero_shot/: zero_shot_agent.py  zero_shot_prompt_builder.py  zero_shot_prompt_builder_test.py
python/battle/: battle_coordinator.py  battle_coordinator_test.py  battle_state_tracker.py  battle_state_tracker_test.py  message_router.py  message_router_test.py  opponent_stats_tracker.py  opponent_stats_tracker_test.py  parallel_challenge_handler.py  run_battle.py  run_parallel_battles.py
python/game/: exceptions.py
python/game/data/: ability.py  base.py  game_data.py  item.py  move.py  (+6 more)
python/game/interface/: BUILD.bazel  __init__.py  battle_action.py  battle_action_test.py  challenge_handler.py  challenge_handler_test.py  team_loader.py  team_loader_test.py
python/game/protocol/: BUILD.bazel  battle_event_logger.py  battle_event_logger_test.py  battle_stream.py  battle_stream_test.py  message_parser.py  message_parser_test.py  showdown_client.py
python/game/schema/: BUILD.bazel  __init__.py  battle_state.py  battle_state_test.py  enums.py  field_state.py  field_state_test.py  object_name_normalizer.py  pokemon_state.py  pokemon_state_test.py  team_state.py  team_state_test.py  utils.py
python/integration_tests/: action_simulation_agent_integration_test.py  battle_environment_integration_test.py  battle_stream_store_integration_test.py  game_data_integration_test.py  request_validation_integration_test.py  team_loader_test.py
python/scripts/: download_teams.py
typescript/scripts/: extract_showdown_data.ts
(+53 files in other folders)
