[project]
name = "breadcrumbs"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "absl-py",
    "alembic",
    "annotated-types",
    "anyio",
    "anthropic",
    "asynctest",
    "boto3",
    "botocore",
    "certifi",
    "cffi",
    "cfgv",
    "charset-normalizer",
    "claude-agent-sdk",
    "click",
    "colorama",
    "configparser",
    "cryptography",
    "distlib",
    "distro",
    "exa-py",
    "fastapi",
    "filelock",
    "google-adk",
    "greenlet",
    "griffe",
    "h11",
    "httpcore",
    "httpx",
    "httpx-sse",
    "identify",
    "idna",
    "jiter",
    "jmespath",
    "litellm",
    "mako",
    "markupsafe",
    "mcp",
    "msgspec",
    "nodeenv",
    "openai",
    "openai-agents",
    "platformdirs",
    "pre-commit",
    "psycopg2-binary",
    "pycparser",
    "pydantic",
    "pydantic-core",
    "pyjwt",
    "pyrefly",
    "pytest",
    "python-dateutil",
    "python-dotenv",
    "pyyaml",
    "requests",
    "ruff",
    "s3transfer",
    "six",
    "sniffio",
    "sqlalchemy",
    "sse-starlette",
    "starlette",
    "tqdm",
    "types-requests",
    "typing-inspection",
    "typing-extensions",
    "urllib3",
    "uvicorn",
    "virtualenv",
    "websockets",
    "workos",
    "datasets>=4.1.1",
    "huggingface-hub>=0.35.3",
]

