load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "battle_action",
    srcs = ["battle_action.py"],
    visibility = ["//python:__subpackages__"],
)

py_test(
    name = "battle_action_test",
    srcs = ["battle_action_test.py"],
    deps = [
        ":battle_action",
    ],
)
