load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "enums",
    srcs = ["enums.py"],
    visibility = ["//python:__subpackages__"],
)

py_library(
    name = "pokemon_state",
    srcs = ["pokemon_state.py"],
    visibility = ["//python:__subpackages__"],
    deps = [
        ":enums",
    ],
)

py_library(
    name = "team_state",
    srcs = ["team_state.py"],
    visibility = ["//python:__subpackages__"],
    deps = [
        ":enums",
        ":pokemon_state",
    ],
)

py_library(
    name = "field_state",
    srcs = ["field_state.py"],
    visibility = ["//python:__subpackages__"],
    deps = [
        ":enums",
    ],
)

py_library(
    name = "battle_state",
    srcs = ["battle_state.py"],
    visibility = ["//python:__subpackages__"],
    deps = [
        ":enums",
        ":field_state",
        ":pokemon_state",
        ":team_state",
    ],
)

py_test(
    name = "pokemon_state_test",
    srcs = ["pokemon_state_test.py"],
    deps = [
        ":enums",
        ":pokemon_state",
    ],
)

py_test(
    name = "team_state_test",
    srcs = ["team_state_test.py"],
    deps = [
        ":enums",
        ":pokemon_state",
        ":team_state",
    ],
)

py_test(
    name = "field_state_test",
    srcs = ["field_state_test.py"],
    deps = [
        ":enums",
        ":field_state",
    ],
)

py_test(
    name = "battle_state_test",
    srcs = ["battle_state_test.py"],
    deps = [
        ":battle_state",
        ":enums",
        ":field_state",
        ":pokemon_state",
        ":team_state",
    ],
)
